--- a/src/main/resources/templates/encryptionForm.html
+++ b/src/main/resources/templates/encryptionForm.html
@@ -63,7 +63,7 @@
     <form th:action="@{/encryption/encrypt}" th:object="${request}" method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="userKey" class="form-label">User Key:</label>
-            <input type="text" th:class="'form-control ' + ${isInvalid}" id="userKey" th:field="*{userKey}" maxlength="8" placeholder="Enter up to 8 characters" required>
+            <input type="text" th:class="'form-control ' + ${isInvalid}" id="userKey" th:field="*{userKey}" maxlength="8" placeholder="Enter exactly 8 characters." required>
             <div class="invalid-feedback">
                 Invalid user key
             </div>
